<resources>
    <string name="app_name">AppaWheels.com</string>
    <string name="appawheels_com">AppaWheels.com</string>
    <string name="with_a_valid_number_you_can_access_our_deliveries_and_our_other_services">With a valid number, You can access our deliveries and our other services.</string>
    <string name="welcome">Welcome</string>
    <string name="change">Change</string>
    <string name="one_time_password_otp_has_been_sent_to_this_number">One time password(OTP) has been sent to this number.</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_orders">Looks like you dont have any \n Truck or 2 Wheelers orders</string>
    <string name="book_now">Book Now</string>
    <string name="view_details">View details</string>
    <string name="invite_friends">Invite friends</string>
    <string name="if_you_love_the_work_we_are_doing_n_please_spread_the_word">If you love the work we are doing \n Please spread the word</string>
    <string name="for_any_queries_or_help">For any queries or help</string>
    <string name="contact_us">Contact Us</string>
    <string name="app_version_v5_57_0">App version v5.57.0</string>
    <string name="legal">Legal</string>
    <string name="porter_credits">Porter credits</string>
    <string name="payment">Payment</string>
    <string name="balance_0">Balance : 0</string>
    <string name="add_money">Add Money</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="GOOGLE_API_KEY">AIzaSyD7PGsX_T85cAxk4z61oOrpGsAcrcdGo3o</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_id">Email id</string>
    <string name="sorry_we_do_not_allow_pickup_in_the_area_you_have_selected">Sorry, we do not allow pickup in the area you have selected</string>
    <string name="all_india_parcel">All India Parcel</string>
    <string name="change_pickup_location">Change pickup location</string>
    <string name="packer_u0026_movers"><![CDATA[Packer & Movers]]></string>
    <string name="courier_services">Courier Services</string>
    <string name="enter_pickup_address">Enter Pickup address</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="drop_address">Drop Address</string>
    <string name="house_shifting_need_to_be_a_tedious_task_it_can_be_a_memorable_experience">House shifting need to be a tedious task, it can be a memorable experience</string>
    <string name="shifting_your_house_now_easier_than_ever">Shifting your house now easier than ever,</string>
    <string name="packers_u0026_movers"><![CDATA[Packers & Movers]]></string>
    <string name="within_city">Within City</string>
    <string name="available_in_12_cities_across_india">Available in 12 cities \n across india</string>
    <string name="chat_with_us">Call Us</string>
    <string name="proceed">Proceed</string>
    <string name="select_items">Select items</string>
    <string name="steps_1_4">Steps(1/4)</string>
    <string name="enter_flat_no">Enter Flat NO</string>
    <string name="has_service_lift">Has Service Lift?</string>
    <string name="enter_drop_address">Enter drop address</string>
    <string name="select_shifting_date">Select shifting date</string>
    <string name="tommorow">Tommorow</string>
    <string name="packages_for_20th_jan_2023">Packages for 20th Jan 2023</string>
    <string name="most_popular">MOST POPULAR</string>
    <string name="here_s_what_you_get_with_part_load">Here\'s what you get with Part Load</string>
    <string name="packaging_multi_layered_bubble_wrap">Packaging - Multi layered bubble wrap</string>
    <string name="all_items_will_be_safely_packed_with_a_single_layer_of_bubble_wrap">All items will be safely packed with a single layer of bubble wrap.</string>
    <string name="TERMS">https://appawheels.com/terms-of-service.html</string>
    <string name="POLICY">https://appawheels.com/privacy-policy.html</string>
    <string name="requirement">Requirement</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new Account</string>

</resources>