<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.PaymentFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:text="@string/payment"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/lato_regular"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"

                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tvInviteFriends"
                    android:text="@string/porter_credits"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/lato_bold"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/balance_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp"
                    android:fontFamily="@font/lato_regular"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:paddingVertical="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:id="@+id/tvAddmoney"
                android:paddingHorizontal="@dimen/_7sdp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/background_light_blue"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_money"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_10sdp" />




            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_height="@dimen/_3sdp"/>
    </LinearLayout>
    




</LinearLayout>