<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".VerifyOtpActivity">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/appawheels_com"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_india"
            android:layout_height="@dimen/_25sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvUserNumber"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:text="6261319133"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvChangeNumber"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11sdp"
            android:text="@string/change"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>



    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"

        android:text="@string/one_time_password_otp_has_been_sent_to_this_number"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="@dimen/_15sdp"
            android:progressTint="@color/black"
            android:indeterminateTint="@color/black"
            android:layout_height="@dimen/_15sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_8sdp"
            android:text="Waiting for auto verify OTP"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:hint="Enter OTP Manually"
        android:maxLength="6"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:inputType="number"
        android:gravity="center"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:id="@+id/btnVerifyOtp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_18sdp"
        android:textColor="@color/blue"
        android:background="@drawable/background_stroke_blue"

        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_13sdp"

        android:text="Resend OTP"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>