<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserDetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/appawheels_com"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:src="@drawable/ic_india"
            android:layout_height="@dimen/_25sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvUserNumber"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:text="6261319133"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvChangeNumber"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/blue"
            android:textSize="@dimen/_11sdp"
            android:text="@string/change"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:weightSum="2"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:weightSum="2"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/first_name"
                android:layout_weight="1"
                android:fontFamily="@font/lato_regular"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:maxLength="6"
                android:id="@+id/edtFirstName"
                android:inputType="text"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:weightSum="2"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/black"

                android:layout_weight="1"
                android:fontFamily="@font/lato_regular"
                android:textSize="@dimen/_11sdp"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/edtLastName"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_12sdp"

        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/email_id"
            android:layout_weight="1"
            android:textColor="@color/black"

            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_11sdp"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:id="@+id/edtEmailId"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="Requirement"
        android:fontFamily="@font/lato_regular"
        android:textSize="@dimen/_11sdp"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/menuRepayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/btnRegister"
        android:text="Register"
        android:textAllCaps="false"
        android:layout_marginHorizontal="@dimen/_12sdp"

        android:layout_marginTop="@dimen/_18sdp"
        android:textColor="@color/white"
        android:background="@drawable/background_rounded_blue_max"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey_dark"
            android:buttonTint="@color/blue"
            android:id="@+id/chkAllowWhatsApp"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="Allow Porter to send updates on What'sApp"
            android:layout_height="wrap_content"/>


    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"

        android:text="@string/one_time_password_otp_has_been_sent_to_this_number"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
</LinearLayout>