<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SelectLocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_12sdp"

        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/pickup_address"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_8sdp"

            android:textColor="@color/green"

            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/_15sdp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextOutLineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"

            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@null"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/enter_pickup_address"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12ssp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutLineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <EditText
                    android:id="@+id/edtFlatNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/enter_flat_no"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:text="@string/has_service_lift"
                android:buttonTint="@color/green"
                android:id="@+id/checkBoxPickupAddress"
                android:fontFamily="@font/lato_bold"
                android:layout_weight="1"

                android:layout_height="wrap_content"/>





        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_12sdp"

        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="Drop Address"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_8sdp"

            android:textColor="@color/green"

            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/_15sdp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextOutLineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"

            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/edtDropAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@null"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/enter_drop_address"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_12ssp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutLineStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <EditText
                    android:id="@+id/edtFlatNoDropAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/enter_flat_no"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/_12ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:text="@string/has_service_lift"
                android:buttonTint="@color/green"
                android:id="@+id/checkBoxDropAddress"
                android:fontFamily="@font/lato_bold"
                android:layout_weight="1"

                android:layout_height="wrap_content"/>





        </LinearLayout>



    </LinearLayout>


</LinearLayout>