<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/appawheels_com"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical"
        android:background="@drawable/background_top_rounded"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/_15sdp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/with_a_valid_number_you_can_access_our_deliveries_and_our_other_services"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/_10sdp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_12sdp"

            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/background_grey_rounded"
                android:padding="@dimen/_3sdp"
                android:clickable="false"
                android:focusable="false"
                android:layout_height="wrap_content">
                <com.hbb20.CountryCodePicker
                    android:layout_width="wrap_content"
                    app:ccp_defaultPhoneCode="91"
                    android:clickable="false"
                    android:focusable="false"
                    android:id="@+id/ccpMobileCountryCode"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:id="@+id/edtMobileNumber"
                android:layout_gravity="center"
                android:hint="Mobile Number"
                android:background="@drawable/background_grey_solid"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_6sdp"
                android:textSize="@dimen/_11sdp"
                android:inputType="number"
                android:maxLength="10"
                android:imeOptions="actionDone"
                android:layout_marginStart="@dimen/_8sdp">



            </EditText>



        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/btnLogin"
            android:text="Login"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_18sdp"
            android:textColor="@color/white"
            android:background="@drawable/background_rounded_blue"
            android:layout_height="wrap_content"/>







    </LinearLayout>










</RelativeLayout>